might have fixed the auto commit